--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,3 @@
-<a href="#"
-  data-controller="counter"
-  data-action="click->counter#increment"
->Increment <%= @count %></a>
+<h1> Another great example </h1>
+<div data-reflex="click->WelcomeReflex#greetings"> click here </div>
+  <%= @welcome_message %>
