--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,71 @@
-<h1> Another great example </h1>
-<div data-reflex="click->WelcomeReflex#greetings"> click here </div>
+<h1> Simple example page </h1>
+
+<h3> Click to show example </h3>
+<p>
+  <div data-reflex="click->WelcomeReflex#greetings"> click here </div>
   <%= @welcome_message %>
+</p>
+
+<h3> Increment example using element dataset </h3>
+<p>
+  <div data-reflex='click->WelcomeReflex#increment'
+       data-step="1"
+       data-count="<%=@count.to_i %>" >
+    Increment <%= @count.to_i %>
+  </div>
+</p>
+
+<h3> input example showing to screen </h3>
+<p>
+  <h4> Enter your name </h4>
+  <input type="text" value="<%=@value%>" data-reflex="keyup->WelcomeReflex#say_hello">
+  <h4> <%= @name %> </h4>
+</p>
+
+<%# <h3> Multiple reflex actions </h3>
+<p>
+<div data-reflex="click->WelcomeReflex#multi1 ">
+</p> %>
+
+<h3> Persisted data </h3>
+
+<h3> Session Persisted </h3>
+<h3> Increment example using element dataset and stimulus controller </h3>
+<p>
+  <div data-controller="example"
+       data-action='click->example#increment'
+       data-step="1"
+       data-count="<%=@increment.to_i %>" >
+    Increment from stimulus <%= @increment.to_i %>
+  </div>
+</p>
+
+<h3> Static Table (no stimulus) </h3>
+<table>
+  <tr>
+    <th>Student Name</th>
+    <th>email</th>
+    <th>Phone number</th>
+  </tr>
+
+  <% @students&.each do |student| %>
+    <tr>
+      <td><%= student[:name] %></td>
+      <td><%= student[:email] %></td>
+      <td><%= student[:phone_number] %></td>
+    </tr>
+  <% end %>
+</table>
+
+  <%= form_with model: @student, url: save_student_path do |f| %>
+    <%= f.label "name:" %>
+    <%= f.text_field :name %>
+    <%= f.label "email:" %>
+    <%= f.text_field :email %>
+    <%= f.label "phone number:" %>
+    <%= f.text_field :phone_number %>
+    <%= f.submit %>
+  <% end%>
+
+
+<%= %>
