--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,46 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+* {
+  font-family: Roboto;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  margin: 16px 64px;
+}
+
+h1 {
+  color: #000080;
+  text-align: center;
+  font-size: 24px;
+  text-decoration: underline;
+  font-weight: 800;
+  margin-bottom: 24px;
+}
+
+h2 {
+  color: #000080;
+}
+
+h2,
+h3 {
+  margin-top: 48px;
+}
+
+h3 {
+  color: #036;
+}
+
+h3:first-of-type {
+  margin-top: 16px;
+}
+
+.table {
+  display: block;
+  //   flex-direction: column;
+}
