--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -44,3 +44,11 @@ h3:first-of-type {
   display: block;
   //   flex-direction: column;
 }
+
+.student-table{
+  background-color: #ffffff;
+}
+
+.student-form{
+  background-color: #ffffff;
+}
