--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <h1> Basic demo of Stimulus Reflex actions using Rails 5.3 </h1>
+  <h1> Basic demo of Stimulus Reflex actions using Rails 5.4 </h1>
 
   <div>
       <h3>  Click to reveal</h3>
@@ -42,6 +42,37 @@
           Increment from Stimulus: <%= @increment.to_i %>
         </div>
       </p>
-
   </div>
+  <div>
+    <h2> Tables </h2>
+    <p> student count <%= @students.count %> </p>
+    <table class ='student-table'>
+      <tr>
+        <th> first name </th>
+        <th> Last name </th>
+        <th> Email </th>
+        <th> Number </th>
+      </tr>
+      <% @students.each do |student| %>
+          <tr>
+            <td><%= student[:first_name] %></td>
+            <td><%= student[:last_name] %></td>
+            <td><%= student[:email] %></td>
+            <td><%= student[:number] %></td>
+          </tr>
+      <% end %>
+    </table>
+    <div class = 'student-form'>
+      <%= form_with model: @student, url: save_student_path do |f| %>
+        <%= f.label "first name:" %>
+        <%= f.text_field :first_name %>
+        <%= f.label "surname:" %>
+        <%= f.text_field :last_name %>
+        <%= f.label "email:" %>
+        <%= f.text_field :email %>
+        <%= f.label "phone number:" %>
+        <%= f.text_field :number %>
+        <%= f.submit %>
+      <% end%>
+    </div>
 </div>
