Feat: Update number to phone number in DB

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -48,11 +48,11 @@ h4 {
 
 .table {
   display: block;
-  //   flex-direction: column;
 }
 
 .student-table {
   background-color: #ffffff;
+  margin-bottom: 64px;
 }
 
 .student-form {
